tests/neg/7722.check
-- Error: tests/neg/7722.scala:2:35 ------------------------------------------------------------------------------------
2 |  @scala.annotation.alpha("E") def this() = this(3) // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  @alpha annotation "E" may not be used on a constructor
